--- a/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Index.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Index.cshtml
@@ -8,6 +8,14 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    @using (Html.BeginForm())
+    {
+    <p>
+        Last Name: @Html.TextBox("SearchString") <br />
+        <input type="submit" value="Filter" />
+    </p>
+    }
+    
 </p>
 <table class="table">
     <tr>
