Add custom PESEL validator, view improvements

--- a/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Details.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Details.cshtml
@@ -52,6 +52,12 @@
         <dd>
             @Html.DisplayFor(model => model.salaryBonus)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.address)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.address)
+        </dd>
     </dl>
 </div>
 <p>
