--- a/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Edit.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Edit.cshtml
@@ -69,7 +69,7 @@
                         }
                         else
                         {
-                            <option value="@item.ID" selected> @item </option>
+                            <option value="@item.ID"> @item </option>
                         }
 
                     }
