--- a/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Index.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Index.cshtml
@@ -40,6 +40,9 @@
         <th>
             @Html.DisplayNameFor(model => model.salaryBonus)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.address)
+        </th>
         <th></th>
     </tr>
     
@@ -65,6 +68,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.salaryBonus)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.address)
         </td>
         <td>
             <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
