--- a/AspMVCDemo/src/AspMVCDemo/Views/Shared/_Layout.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Shared/_Layout.cshtml
@@ -32,11 +32,10 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                         <li><a asp-controller="Drivers" asp-action="Index">Drivers</a></li>
-                        <li><a asp-controller="Addresses" asp-action="Index">Addresses</a></li>
+                        <li><a asp-controller="Clients" asp-action="Index">Clients</a></li>
                         <li><a asp-controller="Vehicles" asp-action="Index">Vehicles</a></li>
+                        <li><a asp-controller="Addresses" asp-action="Index">Addresses</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
