Add super simple role management

--- a/AspMVCDemo/src/AspMVCDemo/Views/Manage/Index.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Manage/Index.cshtml
@@ -75,5 +75,11 @@
                     </form>
                 }*@
         </dd>
+        <h2>Administration</h2>
+        <dt>Roles:</dt>
+        <dd>
+
+            [<a asp-controller="Manage" asp-action="AddRole">Manage</a>]
+        </dd>
     </dl>
 </div>
