--- a/AspMVCDemo/src/AspMVCDemo/Views/Clients/Index.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Clients/Index.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.NIP)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Address)
+            @item.Address
         </td>
         <td>
             <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
