--- a/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Index.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Index.cshtml
@@ -70,7 +70,7 @@
             @Html.DisplayFor(modelItem => item.salaryBonus)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.address)
+            @item.address
         </td>
         <td>
             <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
