--- a/AspMVCDemo/src/AspMVCDemo/Views/Manage/Index.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Manage/Index.cshtml
@@ -79,7 +79,7 @@
         <dt>Roles:</dt>
         <dd>
 
-            [<a asp-controller="Manage" asp-action="AddRole">Manage</a>]
+            [<a asp-controller="Role" asp-action="Index">Manage</a>]
         </dd>
     </dl>
 </div>
