--- a/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Delete.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Delete.cshtml
@@ -7,53 +7,7 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Driver</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.PESEL)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.PESEL)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.available)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.available)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.deleted)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.deleted)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.firstName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.firstName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.lastName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.lastName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.salary)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.salary)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.salaryBonus)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.salaryBonus)
-        </dd>
-    </dl>
+@Html.Partial("_DetailsPartial", Model)
     
     <form asp-action="Delete">
         <div class="form-actions no-color">
