--- a/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Details.cshtml
+++ b/AspMVCDemo/src/AspMVCDemo/Views/Drivers/Details.cshtml
@@ -6,60 +6,8 @@
 
 <h2>Details</h2>
 
-<div>
-    <h4>Driver</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.PESEL)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.PESEL)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.available)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.available)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.deleted)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.deleted)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.firstName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.firstName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.lastName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.lastName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.salary)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.salary)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.salaryBonus)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.salaryBonus)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.address)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.address)
-        </dd>
-    </dl>
-</div>
+@Html.Partial("_DetailsPartial", Model)
+
 <p>
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
